--- a/estilo.css
+++ b/estilo.css
@@ -17,7 +17,7 @@ div.cajon{
 
 div.cajon a div{
 	float: left;
-	background: #C0C0C0;
+	background: #f3f4f8;
 	width: 220px;
 	height: 100px;
 	border-radius: 0px 0px 30px 0px;
@@ -54,13 +54,13 @@ div.nombre{
 }
 
 div.nombre p{
-	color: #C0C0C0;
+	color: #f3f4f8;
 	margin-left: 20px:
 }
 
 div.raya{
 	float: left;
-	background: #C0C0C0;
+	background: #f3f4f8;
 	width: 75%;
 	height: 1px;
 	margin-left: 10%;
